first iteration of calc created. Added tests to project

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+ACTIVE_PAGES = [
+
+];
+
 API_KEY_NASA = "pJFVxyEmQvfBbQpGNXV9xe1gZaeKG1DxgFlsDAfC";
+API_KEY_NYT = "m3X8KlQBugXqxSUZhwjvBiNNUI5M0EJA";
